8346702: [lworld] ShouldNotReachHere in FieldLayout::remove_null_marker()